--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "yarn clean && yarn copy && tsc",
     "watch": "yarn clean && yarn copy && tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "all": "yarn build && yarn start"
   },
   "dependencies": {
     "@types/node": "^18.0.0",
